Statuts et conseils pour covid positif dans son foyer

--- a/src/style.css
+++ b/src/style.css
@@ -466,6 +466,7 @@ main footer .legals {
 }
 .statut-asymptomatique,
 .statut-contact-a-risque-meme-lieu-de-vie,
+.statut-contact-a-risque-meme-lieu-de-vie-sans-depistage,
 .statut-contact-a-risque-avec-test,
 .statut-contact-a-risque-sans-test,
 .statut-positif-symptomatique-urgent,
